--- a/product_page/pro_page.html
+++ b/product_page/pro_page.html
@@ -19,10 +19,10 @@
         <di id="item_sort">
             <p>30 items</p>
             <div id="sort">
-            Sort by price <select id="sort-by-price" onclick="handlePrice()">
+            Sort by price <select id="sort-by-price" onclick="handleprice()">
                     <option value="">Select</option>
-                    <option value="htl">High to Low</option>
-                    <option value="lth">Low to High</option>
+                    <option value="htl" id="sort-htl">High to Low</option>
+                    <option value="lth" id="sort-lth">Low to High</option>
                 </select>
             </div>
         </div>
