--- a/payments.html
+++ b/payments.html
@@ -157,9 +157,13 @@
       </div>
       <div id="payment-right">
         <p>Back to shopping</p>
+
+      </div>
+      <div id="product-payment-cart">
+
       </div>
     </div>
     
-
+  <script src="./js/payments.js"></script>  
   </body> 
 </html>
