--- a/payments.html
+++ b/payments.html
@@ -150,8 +150,11 @@
     </div>
     <div id="payment-right">
       <p>Back to shopping</p>
+      <div>
+        <h3>cart</h3>
+      </div>
     </div>
-    <div id="product-payment-cart"></div>
+  
 
   </div>
  
