--- a/index.html
+++ b/index.html
@@ -6,10 +6,89 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <h1>HOME PAGE</h1>
+    <div class="nav1">
+        <p>New site, new samples: a whole new world. Claim your free sample in-cart.</p>
+    </div>
+    <div class="nav2">
+        <div>
+            <h2>
+                Glossier
+            </h2>
+        </div>
+        <div id="res">
+            <p>SKINCARE</p>
+            <p>MAKEUP</p>
+            <p>BODY</p>
+            <p>FRAGRANCE</p>
+            <p>GLOSSIWEAR</p>
+            <P>SETS</P>
+        </div>
+        <div>
+            <P>SEARCH</P>
+            <P>LOG IN</P>
+            <P>BAG</P>
+        </div>
+    </div>
+    <img src="1.png" style="width: 98%;">
+    <div id="body">
+        <div><img src="2.png"></div>
+        <div><img src="3.png"></div>
+    </div>
+    <div class="body1">
+        <div>
+            <img src="https://glossier-prod.imgix.net/products/gsuit-curve-01.png?auto=format&q=40&w=540">
+            <div class="box">
+                <h3>G Suit</h3>
+                <p>$22</p>
+            </div>
+            <p>Soft touch lip creem</p>
+            <p>Add To Bag</p>
+        </div>
+        <div>
+            <img
+                src="https://glossier-prod.imgix.net/products/glossier-gsuitduo-carousel-01.png?auto=format&q=40&w=540">
+            <div class="box">
+                <h3>G Suit</h3>
+                <p>$38</p>
+            </div>
+            <p>Soft touch lip creem</p>
+            <p>Choose Set</p>
+        </div>
+        <div>
+            <img
+                src="https://glossier-prod.imgix.net/products/glossier-lipcolortrio-carousel-01.png?auto=format&q=40&w=540">
+            <div class="box">
+                <h3>G Suit</h3>
+                <p>$52</p>
+            </div>
+            <p>Soft touch lip creem</p>
+            <p>Choose Set</p>
+        </div>
+        <div>
+            <img src="https://glossier-prod.imgix.net/files/glossier-cleanserduo-01.png?auto=format&q=40&w=540">
+            <div class="box">
+                <h3>G Suit</h3>
+                <p>$36</p>
+            </div>
+            <p>Soft touch lip creem</p>
+            <p>Choose Set</p>
+        </div>
+
+    </div>
+    <div class="body2">
+        <div><img src="https://glossier-prod.imgix.net/files/4x5_G.Suit_UGC.png?auto=format&q=40&w=540"></div>
+        <div>
+            <img
+                src="https://glossier-prod.imgix.net/products/glossier-bodyherocomplete-carousel-01.png?auto=format&q=40&w=540">
+        </div>
+        <div><img src="https://glossier-prod.imgix.net/files/1x1_G.Suit_UGC.png?auto=format&q=40&w=540"></div>
+    </div>
+
+
 </body>
 
 </html>
