--- a/ForTest/face.html
+++ b/ForTest/face.html
@@ -194,6 +194,13 @@
         location.href = "/Glossier/pro_page.html"
     }
 
+    const eyes = document.getElementById("eyes")
+    eyes.addEventListener("click", showEyes)
+
+    function showEyes(){
+
+        location.href = "/Glossier/ForTest/eyes.html"
+    }
 
 
 </script>
