--- a/signup.html
+++ b/signup.html
@@ -34,7 +34,7 @@
 
             <div>
                 <button class="createBtn" onclick="signup()">Create an account</button>
-                <button class="signBtn">Sigin to glossier.com</button>
+                <button class="signBtn" onclick="signin()">Sigin to glossier.com</button>
             </div>
 
         </div>
