--- a/index.html
+++ b/index.html
@@ -38,47 +38,175 @@
         <div><img src="2.png"></div>
         <div><img src="3.png"></div>
     </div>
+    <video autoplay width="100%" muted loop>
+        <source
+            src="https://player.vimeo.com/progressive_redirect/playback/816366764/rendition/1080p/file.mp4?loc=external&signature=6429a4dc069ebf8f73d6e87084b7a0fd620f1ec22f4ea936efde9dce8e945706">
+    </video>
     <div class="body1">
         <div>
             <img src="https://glossier-prod.imgix.net/products/gsuit-curve-01.png?auto=format&q=40&w=540">
             <div class="box">
-                <h3>G Suit</h3>
+                <h3>Super Bounce</h3>
                 <p>$22</p>
             </div>
-            <p>Soft touch lip creem</p>
+            <p>Hyaluronic acid + vitamin b5 serum</p>
             <p>Add To Bag</p>
         </div>
         <div>
             <img
                 src="https://glossier-prod.imgix.net/products/glossier-gsuitduo-carousel-01.png?auto=format&q=40&w=540">
             <div class="box">
-                <h3>G Suit</h3>
+                <h3>Milky Oil</h3>
                 <p>$38</p>
             </div>
-            <p>Soft touch lip creem</p>
+            <p>Waterproof makeup remover</p>
             <p>Choose Set</p>
         </div>
         <div>
             <img
                 src="https://glossier-prod.imgix.net/products/glossier-lipcolortrio-carousel-01.png?auto=format&q=40&w=540">
             <div class="box">
-                <h3>G Suit</h3>
+                <h3>Universal Pro-Retinol</h3>
                 <p>$52</p>
             </div>
-            <p>Soft touch lip creem</p>
+            <p>Nightly renewing complex</p>
             <p>Choose Set</p>
         </div>
         <div>
             <img src="https://glossier-prod.imgix.net/files/glossier-cleanserduo-01.png?auto=format&q=40&w=540">
             <div class="box">
-                <h3>G Suit</h3>
-                <p>$36</p>
+                <h3>The Super Pack</h3>
+                <p>$52</p>
             </div>
             <p>Soft touch lip creem</p>
             <p>Choose Set</p>
         </div>
-
     </div>
+    <div class="body4">
+        <div>
+            <img
+                src="https://glossier-prod.imgix.net/products/glossier-body-oilwash-carousel-01.png?auto=format&q=40&w=540">
+            <div class="box1">
+                <h3>The Cleanser Duo</h3>
+                <p>$22</p>
+            </div>
+            <p>conditioning face wash + clarifying face wash</p>
+            <p>Add To Bag</p>
+        </div>
+        <div>
+            <img
+                src="https://glossier-prod.imgix.net/products/glossier-body-cream-carousel-01.png?auto=format&q=40&w=540">
+            <div class="box1">
+                <h3>Futuredew</h3>
+                <p>$38</p>
+            </div>
+            <p>Oil serum hybrid</p>
+            <p>Choose Set</p>
+        </div>
+        <div>
+            <img
+                src="https://glossier-prod.imgix.net/products/glossier-deorefill-sandstone-carousel-01.png?auto=format&q=40&w=540">
+            <div class="box1">
+                <h3>Balm Dotcom</h3>
+                <p>$52</p>
+            </div>
+            <p>Universal salve</p>
+            <p>Choose Set</p>
+        </div>
+        <div>
+            <img
+                src="https://glossier-prod.imgix.net/products/glossier-body-drytouchoil-carousel-01.png?auto=format&q=40&w=540">
+            <div class="box1">
+                <h3>Milky Jelly Cleanser</h3>
+                <p>$52</p>
+            </div>
+            <p>Conditioning face wash</p>
+            <p>Choose Set</p>
+        </div>
+    </div>
+    <div class="body5">
+        <div>
+            <img
+                src="https://glossier-prod.imgix.net/products/glossier-makeupset-carousel-01.png?auto=format&q=40&w=540">
+            <div class="box2">
+                <h3>Cleanser Concentrate</h3>
+                <p>$22</p>
+            </div>
+            <p>Clarifying face wash</p>
+            <p>Add To Bag</p>
+        </div>
+        <div>
+            <img
+                src="https://glossier-prod.imgix.net/products/glossier-dewylook-carousel-01.png?auto=format&q=40&w=540">
+            <div class="box2">
+                <h3>Priming Moisturizer</h3>
+                <p>$38</p>
+            </div>
+            <p>Buildable hydrating creme</p>
+            <p>Choose Set</p>
+        </div>
+        <div>
+            <img
+                src="https://glossier-prod.imgix.net/products/glossier-skintint-concealer-carousel-01.png?auto=format&q=40&w=540">
+            <div class="box2">
+                <h3>Priming Moisturizer Balance</h3>
+                <p>$52</p>
+            </div>
+            <p>Oil-control gel cream</p>
+            <p>Choose Set</p>
+        </div>
+        <div>
+            <img src="https://glossier-prod.imgix.net/files/glossier-cleanserduo-01.png?auto=format&q=40&w=540">
+            <div class="box2">
+                <h3>Priming Moisturizer Rich</h3>
+                <p>$52</p>
+            </div>
+            <p>Luxurious face cream</p>
+            <p>Choose Set</p>
+        </div>
+    </div>
+    <div class="body6">
+        <div>
+            <img src="https://glossier-prod.imgix.net/products/glossier-bdctrio-carousel-01.png?auto=format&q=40&w=540">
+            <div class="box3">
+                <h3>Invisible Shield</h3>
+                <p>$22</p>
+            </div>
+            <p>Daily sunscreen +</p>
+            <p>Add To Bag</p>
+        </div>
+        <div>
+            <img
+                src="https://glossier-prod.imgix.net/products/glossier-superpack-carousel-01.png?auto=format&q=40&w=540">
+            <div class="box3">
+                <h3>After Baume</h3>
+                <p>$38</p>
+            </div>
+            <p>Moisture barrier recovery cream</p>
+            <p>Choose Set</p>
+        </div>
+        <div>
+            <img
+                src="https://glossier-prod.imgix.net/products/glossier-beautybag-carousel-01.png?auto=format&q=40&w=540">
+            <div class="box3">
+                <h3>Super Glow</h3>
+                <p>$52</p>
+            </div>
+            <p>Vitamin c + magnesium serum</p>
+            <p>Choose Set</p>
+        </div>
+        <div>
+            <img
+                src="https://glossier-prod.imgix.net/products/glossier-waterbottle-carousel-01.png?auto=format&q=40&w=540">
+            <div class="box3">
+                <h3>Super Pure</h3>
+                <p>$52</p>
+            </div>
+            <p>Niacinamide + zinc serum</p>
+            <p>Choose Set</p>
+        </div>
+    </div>
+
     <div class="body2">
         <div><img src="https://glossier-prod.imgix.net/files/4x5_G.Suit_UGC.png?auto=format&q=40&w=540"></div>
         <div>
