--- a/eyes.html
+++ b/eyes.html
@@ -173,7 +173,7 @@
     function showAll(){
         
 
-        location.href = "/Glossier/pro_page.html"
+        location.href = "pro_page.html"
     }
 
 </script>
