--- a/face.html
+++ b/face.html
@@ -191,7 +191,7 @@
     function showAll(){
         
 
-        location.href = "/Glossier/pro_page.html"
+        location.href = "pro_page.html"
     }
 
     const eyes = document.getElementById("eyes")
@@ -199,7 +199,7 @@
 
     function showEyes(){
 
-        location.href = "/Glossier/ForTest/eyes.html"
+        location.href = "eyes.html"
     }
 
 
