--- a/payments.html
+++ b/payments.html
@@ -428,7 +428,7 @@ h2{
       </div>
     </div>
     <div id="payment-right">
-      <a a href="products.html"> <p>Back to shopping</p></a>
+      <a a href="pro_page.html"> <p>Back to shopping</p></a>
       <div class="order-summary">
         <h4>Order Summary <span id="length"></span></h4>
         <hr>
@@ -567,6 +567,7 @@ h2{
 
             if (isValid) {
               alert('Payment successful. Redirecting to the homepage.');
+              window.location.href = 'index.html';
             
             } else {
               // Show error message with specific error details
